[package]
name = "ut325f-fourup"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
futures = "0.3.33"
thiserror = "2"
tokio = { version = "1.53.1", features = ["macros", "rt-multi-thread", "time"] }
ut325f-rs = { version = "1.0.0", features = ["btleplug"] }
